<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">绿霸</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="copyright">Copyright © 2014 Green Dam. All Rights Reserved.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tell_user">\n关于一些操作使用：
        \n1.在进入文件展示页面后，可以通过左划文件，长按文件可操作文件；
        \n2.在分类页面可通过下拉刷新内存信息，在文件展示页面，可下拉刷新文件列表；
        \n3.本软件的默认文件类型：图片(jpg)，视频(mp4)，音乐(mp3)，压缩包(zip)，安装包(apk)，文档(txt)。
        如果您想查看其他类型的文件，可通过主分类页面右下角的搜索入口进行搜索；
        \n\t\t\t\t\t感谢您对本软件的使用和支持，如果您对本软件有任何建议和问题，欢迎您
        通过本页面下方的邮箱联系作者本人，我会尽快回应您的反馈并表示感谢。再次感谢您的使用，祝您生活愉快，
        鸡年大吉吧。</string>
    <string name="title">快客</string>
    <string name="all">总共：</string>
    <string name="reading">正在读取</string>
    <string name="gb">GB</string>
    <string name="last">剩余：</string>
    <string name="image">图片</string>
    <string name="video">视频</string>
    <string name="music">音乐</string>
    <string name="doc">文档</string>
    <string name="apk">安装包</string>
    <string name="zip">压缩包</string>
    <string name="fileNameSearch">文件名搜索</string>
    <string name="fileSearch">类型文件搜索</string>
</resources>
